Squashed 'nrgljubljana/' changes from 6dcb439..0e75fa8
0e75fa8 detect MKL, and add -DMKL to BLAS_LIBRARIES
20d7f64 log file generation
ff14a7d chrono library for timing, boost::stacktrace for stack dumps, different handling of precision in output

git-subtree-dir: nrgljubljana
git-subtree-split: 0e75fa8c597d7501f7383816cdd0027d8e92546b

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -112,6 +112,13 @@ install(TARGETS boost EXPORT nrgljubljana-targets)
 find_package(LAPACK REQUIRED)
 find_package(BLAS REQUIRED)
 add_library(blas_lapack INTERFACE)
+message(STATUS "BLAS_LIBRARIES=${BLAS_LIBRARIES}")
+message(STATUS "LAPACK_LIBRARIES=${LAPACK_LIBRARIES}")
+string(FIND "${BLAS_LIBRARIES}" "mkl_core" MKL_FIND_POS)
+if(MKL_FIND_POS GREATER -1)
+  list(APPEND BLAS_LINKER_FLAGS "-DMKL")
+  message(STATUS "Using MKL for linear algebra")
+endif()
 target_compile_options(blas_lapack INTERFACE ${LAPACK_LINKER_FLAGS} ${BLAS_LINKER_FLAGS})
 target_link_libraries(blas_lapack INTERFACE ${LAPACK_LIBRARIES} ${BLAS_LIBRARIES})
 install(TARGETS blas_lapack EXPORT nrgljubljana-targets)
