--- a/c++/CMakeLists.txt
+++ b/c++/CMakeLists.txt
@@ -20,6 +20,7 @@ target_compile_definitions(nrgljubljana_c PUBLIC
 
 # Link dependencies
 target_link_libraries(nrgljubljana_c PUBLIC openmp boost blas_lapack gmp dl
+  # mpfr
   $<$<BOOL:${ASAN}>:asan>
   $<$<BOOL:${UBSAN}>:ubsan>
 )
