[py3] restore nrgljubljana subdirectory

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -164,6 +164,14 @@ if(Build_Tests)
   add_subdirectory(test)
 endif()
 
+# NRG Ljubljana subproject. Turn off symmetry types that we do not currently require.
+option(SYM_MORE "" OFF)
+option(SYM_ALL "" OFF)
+add_subdirectory(nrgljubljana)
+# Make NRG Ljubljana Targets available without tests (commented out; works only in recent CMake versions)
+#add_subdirectory(nrgljubljana EXCLUDE_FROM_ALL)
+#install(TARGETS adapt nrgchain matrix diag unitary broaden kk EXPORT nrgljubljana_interface-targets RUNTIME DESTINATION bin)
+
 # Python
 if(PythonSupport)
   add_subdirectory(python/${PROJECT_NAME})
