--- a/test/python/CMakeLists.txt
+++ b/test/python/CMakeLists.txt
@@ -12,7 +12,12 @@ foreach(test ${all_tests})
   get_filename_component(test_name ${test} NAME_WE)
   get_filename_component(test_dir ${test} DIRECTORY)
   add_test(NAME Py_${test_name} COMMAND ${TRIQS_PYTHON_EXECUTABLE} ${CMAKE_CURRENT_SOURCE_DIR}/${test_dir}/${test_name}.py WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/${test_dir})
-  set_property(TEST Py_${test_name} APPEND PROPERTY ENVIRONMENT PYTHONPATH=${PROJECT_BINARY_DIR}/python:$ENV{PYTHONPATH} ${SANITIZER_RT_PRELOAD})
+  set_property(TEST Py_${test_name} APPEND PROPERTY ENVIRONMENT
+    PYTHONPATH=${PROJECT_BINARY_DIR}/python:$ENV{PYTHONPATH}
+    PATH=${PROJECT_BINARY_DIR}/nrgljubljana/tools:$ENV{PATH}
+    NRGIF_TEMPLATE_DIR=${PROJECT_SOURCE_DIR}/templates
+    ${SANITIZER_RT_PRELOAD}
+  )
 endforeach()
 
 # MPI testing
