[cmake] Add back cpp2rst argument fix

--- a/doc/CMakeLists.txt
+++ b/doc/CMakeLists.txt
@@ -7,6 +7,7 @@ configure_file(${CMAKE_CURRENT_SOURCE_DIR}/conf.py.in ${CMAKE_CURRENT_BINARY_DIR
 add_custom_target(${PROJECT_NAME}_docs_cpp2rst)
 include(${PROJECT_SOURCE_DIR}/share/cmake/extract_flags.cmake)
 extract_flags(${PROJECT_NAME}_c BUILD_INTERFACE)
+string(REPLACE \" \\\" ${PROJECT_NAME}_c_CXXFLAGS ${${PROJECT_NAME}_c_CXXFLAGS})
 separate_arguments(${PROJECT_NAME}_c_CXXFLAGS)
 macro(generate_docs header_file)
   add_custom_command(
