--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -27,7 +27,7 @@ endif()
 
 # ############
 # Define Project
-project(nrgljubljana_interface VERSION 3.3.0 LANGUAGES C CXX)
+project(nrgljubljana_interface VERSION 3.3.0 LANGUAGES CXX)
 get_directory_property(IS_SUBPROJECT PARENT_DIRECTORY)
 
 # ############
