[cmake] Allow both STATIC and DYNAMIC lib for nrgljubljana

--- a/nrgljubljana/c++/CMakeLists.txt
+++ b/nrgljubljana/c++/CMakeLists.txt
@@ -1,6 +1,7 @@
 set(sources nrg-lib.cc)
-add_library(nrgljubljana_c     SHARED ${sources})
-add_library(nrgljubljanacmpl_c SHARED ${sources})
+# Build as a static library
+add_library(nrgljubljana_c     ${sources})
+add_library(nrgljubljanacmpl_c ${sources})
 
 # Enable warnings
 target_link_libraries(nrgljubljana_c     PRIVATE project_warnings)
